<resources>
    <string name="app_name">Everyday</string>
    <string name="register_new_user">注册用户</string>
    <string name="email">邮箱</string>
    <string name="register">注册</string>
    <string name="please_wait">请等待...</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="suggest_create_new_account">还没有账号？创建一个</string>
    <string name="folder">文件夹</string>
    <string name="remember_time_line">记忆时间轴</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="action_settings">设置</string>
    <string name="transition_test">transition_test</string>
    <string name="sort">排序</string>
    <string name="sort_edit_before">修改时间,远到近</string>
    <string name="sort_edit_soon">修改时间,近到远</string>
    <string name="sort_create_before">创建时间,远到近</string>
    <string name="sort_create_soon">创建时间,近到远</string>
    <string name="folder_title">文件夹</string>
    <string name="confirm_ok">保存</string>
    <string name="confirm_cancel">取消</string>
</resources>
