<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="55dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/instagram_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etLoginInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etLoginInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/white_rounded_button"
            android:padding="12dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tvLinkSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/suggest_create_new_account"
            android:textColor="@color/link_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvPleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBarLogin"
        android:layout_alignEnd="@+id/progressBarLogin"
        android:layout_alignLeft="@+id/progressBarLogin"
        android:layout_alignRight="@+id/progressBarLogin"
        android:layout_alignStart="@+id/progressBarLogin"
        android:text="@string/please_wait"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="20sp" />

</RelativeLayout>


















